// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|TimeBoard BulletinBody 1`] = `
Array [
  <div
    className="sc-htpNat dVjKpZ col-md-3 col-6"
  >
    <span
      className="sc-bZQynM gcGXRz"
    >
      先発
    </span>
  </div>,
  <div
    className="sc-bxivhb gFNuVp col-md-3 col-6"
  >
    10:10
  </div>,
  <div
    className="sc-ifAKCX iZcLyV col-md-6 col-12"
  >
    <div
      className="sc-htoDjs jfjQlH"
    >
      <p
        className="sc-dnqmqq jqRora"
      >
        <span
          className="sc-EHOje hVfTaC"
        >
          シャトル運行中
        </span>
        <span
          className="sc-gzVnrw ijDabo"
        >
          のため、
        </span>
        <span
          className="sc-EHOje hVfTaC"
        >
          時間が前後する場合
        </span>
        <span
          className="sc-gzVnrw ijDabo"
        >
          があります
        </span>
        <span
          className="sc-EHOje hVfTaC"
        >
          学校
        </span>
        <span
          className="sc-gzVnrw ijDabo"
        >
          行き
        </span>
        <span
          className="sc-bZQynM gcGXRz"
        >
          最終バス
        </span>
        <span
          className="sc-gzVnrw ijDabo"
        >
          です。
        </span>
      </p>
    </div>
  </div>,
  <div
    className="sc-ifAKCX iZcLyV col-xl-12 col-md-12"
  >
    <div
      className="sc-htoDjs jfjQlH"
    >
      <p
        className="sc-dnqmqq jqRora"
      >
        <span
          className="sc-EHOje hVfTaC"
        >
          本日の運行は終了しました
        </span>
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Components|TimeBoard BulletinHeader 1`] = `
<div
  className="sc-gZMcBi jZcVFV"
>
  <span
    className="sc-gqjmRU hhDYRp"
  >
    sample
  </span>
  
</div>
`;

exports[`Storyshots Components|TimeBoard TimeBoard 1`] = `
<div
  className="sc-VigVT dHoHjK"
>
  <div
    className="sc-gZMcBi jZcVFV"
  >
    <span
      className="sc-gqjmRU hhDYRp"
    >
      本日のバス
    </span>
    
  </div>
  <div
    className="sc-jTzLTM elcElQ"
  >
    <div
      className="row"
    >
      <div
        className="sc-ifAKCX iZcLyV col-xl-12 col-md-12"
      >
        <div
          className="sc-htoDjs jfjQlH"
        >
          <p
            className="sc-dnqmqq jqRora"
          >
            <span
              className="sc-EHOje hVfTaC"
            >
              時刻表データ取得中です
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|TimeBoard TimeBoardItem 1`] = `
<div
  className="sc-VigVT dHoHjK"
>
  <div
    className="sc-gZMcBi jZcVFV"
  >
    <span
      className="sc-gqjmRU hhDYRp"
    >
      学校
    </span>
    <span>
      行き（みなみの発）
    </span>
  </div>
  <div
    className="sc-jTzLTM elcElQ"
  >
    <div
      className="row"
    >
      <div
        className="sc-htpNat dVjKpZ col-md-3 col-6"
      >
        <span
          className="sc-bZQynM gcGXRz"
        >
          最終
        </span>
      </div>
      <div
        className="sc-bxivhb gFNuVp col-md-3 col-6"
      >
        10:10
      </div>
      <div
        className="sc-ifAKCX iZcLyV col-md-6 col-12"
      >
        <div
          className="sc-htoDjs jfjQlH"
        >
          <p
            className="sc-dnqmqq jqRora"
          >
            <span
              className="sc-EHOje hVfTaC"
            >
              シャトル運行中
            </span>
            <span
              className="sc-gzVnrw ijDabo"
            >
              のため、
            </span>
            <span
              className="sc-EHOje hVfTaC"
            >
              時間が前後する場合
            </span>
            <span
              className="sc-gzVnrw ijDabo"
            >
              があります
            </span>
            <span
              className="sc-EHOje hVfTaC"
            >
              学校
            </span>
            <span
              className="sc-gzVnrw ijDabo"
            >
              行き
            </span>
            <span
              className="sc-bZQynM gcGXRz"
            >
              最終バス
            </span>
            <span
              className="sc-gzVnrw ijDabo"
            >
              です。
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
